--- a/static/email/templates/password-reset/body.hbs
+++ b/static/email/templates/password-reset/body.hbs
@@ -1,22 +1,19 @@
-{{> header title="Forgotten password reset" }}
+{{> header title="Restablecimiento de contraseña olvidada" }}
 
 <mj-section background-color="#fafafa">
     <mj-column>
         <mj-text color="#525252">
-            Someone requested a new password for your account.
+            Alguien solicitó una nueva contraseña para su cuenta.
         </mj-text>
-
         <mj-button font-family="Helvetica"
                    background-color="#f45e43"
                    color="white"
                    href="{{ passwordResetUrl }}?token={{ passwordResetToken }}">
-            Reset password
+            Restablecer contraseña
         </mj-button>
-
         <mj-text color="#525252">
-        If you didn't make this request then you can safely ignore this email - nothing has been changed on your account.
+        Si no solicitó este cambio, puede ignorar este correo electrónico; no se ha realizado ningún cambio en su cuenta.
         </mj-text>
-
     </mj-column>
 </mj-section>
 
