--- a/static/email/templates/partials/header.hbs
+++ b/static/email/templates/partials/header.hbs
@@ -13,6 +13,6 @@
     <mj-body>
         <mj-section background-color="#f0f0f0">
             <mj-column>
-                <mj-text>[company header]</mj-text>
+                <mj-text>Ecommer.shop</mj-text>
             </mj-column>
         </mj-section>
