--- a/static/email/templates/partials/footer.hbs
+++ b/static/email/templates/partials/footer.hbs
@@ -2,7 +2,7 @@
 <mj-section background-color="#375a67">
     <mj-column width="100%">
         <mj-text align="center" color="#eee">
-            <span>Hecho con ❤️ por Ecommer.shop</span>
+            <span>Hecho con ❤️ para ti</span>
         </mj-text>
     </mj-column>
 </mj-section>
