Ft: Update Send Email verification route

--- a/static/email/templates/partials/footer.hbs
+++ b/static/email/templates/partials/footer.hbs
@@ -1,5 +1,5 @@
 <!--suppress ALL -->
-<mj-section background-color="#375a67">
+<mj-section background-color="#12123F">
     <mj-column width="100%">
         <mj-text align="center" color="#eee">
             <span>Hecho con ❤️ para ti</span>
