--- a/static/email/templates/partials/header.hbs
+++ b/static/email/templates/partials/header.hbs
@@ -3,15 +3,15 @@
         <mj-title>{{ title }}</mj-title>
         <mj-style inline="inline">
             h3 {
-                font-size: 18px;
-                color: #555;
-                font-weight: normal;
+            font-size: 18px;
+            color: #555;
+            font-weight: normal;
             }
         </mj-style>
     </mj-head>
 
     <mj-body>
-        <mj-section background-color="#f0f0f0">
+        <mj-section background-color="#F1F1F1>
             <mj-column>
                 <mj-text>Ecommer.shop</mj-text>
             </mj-column>
