--- a/static/email/templates/partials/footer.hbs
+++ b/static/email/templates/partials/footer.hbs
@@ -1,10 +1,14 @@
-<!--suppress ALL -->
-<mj-section background-color="#12123F">
-    <mj-column width="100%">
-        <mj-text align="center" color="#eee">
-            <span>Hecho con ❤️ para ti</span>
+    <!-- FOOTER -->
+    <mj-section background-color="#12123F" padding="20px 0">
+      <mj-column>
+        <mj-text align="center" color="#eeeeee" font-size="12px">
+          Hecho con ❤️ para ti
         </mj-text>
-    </mj-column>
-</mj-section>
-</mj-body>
+        <mj-text align="center" color="#eeeeee" font-size="12px">
+          © {{ year }} Ecommer.shop · Todos los derechos reservados
+        </mj-text>
+      </mj-column>
+    </mj-section>
+
+  </mj-body>
 </mjml>
