--- a/static/email/templates/partials/header.hbs
+++ b/static/email/templates/partials/header.hbs
@@ -1,18 +1,31 @@
 <mjml>
-    <mj-head>
-        <mj-title>{{ title }}</mj-title>
-        <mj-style inline="inline">
-            h3 {
-            font-size: 18px;
-            color: #555;
-            font-weight: normal;
-            }
-        </mj-style>
-    </mj-head>
+  <mj-head>
+    <mj-title>{{ title }}</mj-title>
 
-    <mj-body>
-        <mj-section background-color="#F1F1F1>
-            <mj-column>
-                <mj-text>Ecommer.shop</mj-text>
-            </mj-column>
-        </mj-section>
+    <mj-style inline="inline">
+      h3 {
+        font-size: 18px;
+        color: #12123F;
+        font-weight: bold;
+        margin: 0 0 10px 0;
+      }
+      p {
+        font-size: 15px;
+        color: #333333;
+      }
+    </mj-style>
+  </mj-head>
+
+  <mj-body background-color="#F4F6FA">
+
+    <!-- HEADER -->
+    <mj-section background-color="#12123F" padding="20px 0">
+      <mj-column>
+        <mj-text align="center" color="#ffffff" font-size="20px" font-weight="bold">
+          Ecommer.shop
+        </mj-text>
+        <mj-text align="center" color="#cfd2ff" font-size="13px">
+          Experiencia de compra moderna
+        </mj-text>
+      </mj-column>
+    </mj-section>
