--- a/static/email/templates/order-confirmation/body.hbs
+++ b/static/email/templates/order-confirmation/body.hbs
@@ -1,133 +1,40 @@
-{{> header title="Order Receipt" }}
+{{> header title="Confirmación de pedido" }}
 
-<mj-raw>
-    <style type="text/css">
-    .callout {
-        background-color: #375a67;
-        padding: 15px 0;
-    }
-    .callout-large > div {
-        text-align: center !important;
-        color: #fff !important;
-        font-size: 16px !important;
-        font-weight: bold;
-        padding: 0;
-    }
-    .callout-small > div {
-        text-align: center !important;
-        color: #fff !important;
-        font-size: 14px !important;
-        padding: 0;
-    }
-    ul.address {
-        list-style-type: none;
-        padding: 0;
-    }
-    tr.order-row td {
-        border-bottom: 1px dashed #eee;
-    }
-    tr.order-row td:last-child {
-        text-align: center;
-    }
-    tr.total-row {
-        font-weight: bold;
-    }
-    .bg-off-white {
-        background-color: #f5f5f5;
-    }
-    </style>
-</mj-raw>
+<mj-section padding="20px">
+  <mj-column background-color="#ffffff" padding="30px" border-radius="12px">
 
-<mj-section css-class="bg-off-white">
-    <mj-column>
-        <mj-text>
-            Hola {{ order.customer.firstName }} {{ order.customer.lastName }},
-        </mj-text>
-        <mj-text>
-            Gracias por tu pedido!
-        </mj-text>
-    </mj-column>
+    <mj-text font-size="20px" font-weight="bold" color="#12123F">
+      ¡Gracias por tu pedido! 🎉
+    </mj-text>
+
+    <mj-text>
+      Hola {{ order.customer.firstName }} {{ order.customer.lastName }},
+      hemos recibido tu pedido correctamente.
+    </mj-text>
+
+    <mj-divider />
+
+    <mj-text>
+      <strong>Código:</strong> {{ order.code }}<br/>
+      <strong>Fecha:</strong> {{ formatDate order.orderPlacedAt }}<br/>
+      <strong>Total:</strong> {{ formatMoney order.totalWithTax order.currencyCode 'es' }}
+    </mj-text>
+
+  </mj-column>
 </mj-section>
 
+<mj-section padding="10px 20px">
+  <mj-column background-color="#ffffff" padding="20px" border-radius="12px">
+    <mj-text font-weight="bold">Dirección de envío</mj-text>
 
-<mj-section css-class="callout">
-    <mj-column>
-        <mj-text css-class="callout-large"><strong>Codigo de la orden</strong></mj-text>
-        <mj-text css-class="callout-small">{{ order.code }}</mj-text>
-    </mj-column>
-    <mj-column>
-        <mj-text css-class="callout-large"><strong>Fecha de la orden</strong></mj-text>
-        <mj-text css-class="callout-small">{{ formatDate order.orderPlacedAt }}</mj-text>
-    </mj-column>
-    <mj-column>
-        <mj-text css-class="callout-large"><strong>Precio total</strong></mj-text>
-        <mj-text css-class="callout-small">{{ formatMoney order.total order.currencyCode 'es' }}</mj-text>
-    </mj-column>
-</mj-section>
-
-
-<mj-section css-class="bg-off-white">
-    <mj-column>
-        <mj-text>
-            {{#with order.shippingAddress }}
-                <h3>Enviar a: {{ fullName }}</h3>
-                <ul class="address">
-                    {{#if company}}<li>{{ company }}</li>{{/if}}
-                    {{#if streetLine1}}<li>{{ streetLine1 }}</li>{{/if}}
-                    {{#if streetLine2}}<li>{{ streetLine2 }}</li>{{/if}}
-                    {{#if city}}<li>{{ city }}</li>{{/if}}
-                    {{#if province}}<li>{{ province }}</li>{{/if}}
-                    {{#if postalCode}}<li>{{ postalCode }}</li>{{/if}}
-                    {{#if country}}<li>{{ country }}</li>{{/if}}
-                    {{#if phoneNumber}}<li>{{ phoneNumber }}</li>{{/if}}
-                </ul>
-            {{/with}}
-        </mj-text>
-    </mj-column>
-</mj-section>
-
-<mj-section>
-    <mj-column>
-        <mj-text>
-            <h3>Detalle del pedido:</h3>
-        </mj-text>
-        <mj-table cellpadding="6px">
-            {{#each order.lines }}
-                <tr class="order-row">
-                    <td>
-                        <img alt="{{ productVariant.name }}"
-                             style="width: 50px; height: 50px;"
-                             src="{{ featuredAsset.preview }}?w=50&h=50" />
-                    </td>
-                    <td>{{ quantity }} x {{ productVariant.name }}</td>
-                    <td>{{ productVariant.quantity }}</td>
-                    <td>{{ formatMoney discountedLinePriceWithTax ../order.currencyCode 'es' }}</td>
-                </tr>
-            {{/each}}
-            {{#each order.discounts }}
-                <tr class="order-row">
-                    <td colspan="3">
-                        {{ description }}
-                    </td>
-                    <td>{{ formatMoney amount ../order.currencyCode 'es' }}</td>
-                </tr>
-            {{/each}}
-            <tr class="order-row">
-                <td colspan="3">Subtotal:</td>
-                <td>{{ formatMoney order.subTotalWithTax order.currencyCode 'es' }}</td>
-            </tr>
-            {{#each shippingLines }}
-            <tr class="order-row">
-                <td colspan="3">Envío ({{ shippingMethod.name }}):</td>
-                <td>{{ formatMoney priceWithTax ../order.currencyCode 'es' }}</td>
-            </tr>
-            {{/each}}
-            <tr class="order-row total-row">
-                <td colspan="3">Total:</td>
-                <td>{{ formatMoney order.totalWithTax order.currencyCode 'es' }}</td>
-            </tr>
-        </mj-table>
-    </mj-column>
+    <mj-text>
+      {{#with order.shippingAddress}}
+        {{ fullName }}<br/>
+        {{ streetLine1 }}<br/>
+        {{ city }}, {{ country }}
+      {{/with}}
+    </mj-text>
+  </mj-column>
 </mj-section>
 
 {{> footer }}
